--- a/index.html
+++ b/index.html
@@ -12,20 +12,27 @@
         
         <link rel="stylesheet" href="CSS/reset.css">
         <link rel="stylesheet" href="CSS/index.css">
+        <link rel="stylesheet" href="CSS/components/title.css">
     </head>
 
     <body>
 
         <header>
-            <img src="assets/img/logo.png" alt="logo igu">
+            <img class = "logo" src="assets/img/IgorSerio.png" alt="logo">
 
             <nav>
                 <a href="" lang="en">Skills</a>
                 <a href="" lang="en">Projetos</a>
-                <a href="">Sobre</a>
                 <a href="">Contatos</a>
-                <a id="button-dowload" href="" lang="en">Download Curriculo</a>
+                <a class="button" href="" lang="en">Download Curriculo</a>
             </nav>
         </header>
+
+        <h1>Hello I'm Igor<br>Developer</h1>
+        <img class = "foto" src="assets/img/logo.png" alt="logo">
+        <div class = "box"></div>
+        <img class = "container" src="assets/img/backgroud.png" alt="backgroud">
+        <a class="buttonAzSk" href="" lang="en">About me</a>
+        <a class="buttonAzCl" href="" lang="en">TESTE</a>
     </body>
 </html>
