--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="CSS/reset.css">
         <link rel="stylesheet" href="CSS/index.css">
         <link rel="stylesheet" href="CSS/components/title.css">
+        <link rel="stylesheet" href="CSS/components/subtitle.css">
     </head>
 
     <body>
@@ -28,7 +29,8 @@
             </nav>
         </header>
 
-        <h1>Hello I'm Igor<br>Developer</h1>
+        <h1>Hello I'm Igor</h1>
+        <h2>Developer</h2>
         <img class = "foto" src="assets/img/logo.png" alt="logo">
         <div class = "box"></div>
         <img class = "container" src="assets/img/backgroud.png" alt="backgroud">
