--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="CSS/index.css">
         <link rel="stylesheet" href="CSS/components/title.css">
         <link rel="stylesheet" href="CSS/components/subtitle.css">
+        <link rel="stylesheet" href="CSS/components/box.css">
     </head>
 
     <body>
@@ -29,12 +30,14 @@
             </nav>
         </header>
 
-        <h1>Hello I'm Igor</h1>
-        <h2>Developer</h2>
-        <img class = "foto" src="assets/img/logo.png" alt="logo">
-        <div class = "box"></div>
         <img class = "container" src="assets/img/backgroud.png" alt="backgroud">
-        <a class="buttonAzSk" href="" lang="en">About me</a>
-        <a class="buttonAzCl" href="" lang="en">TESTE</a>
+        
+        <div class = "box">
+            <h1>Hello I'm Igor</h1>
+            <h2>Developer</h2>
+            <img class = "foto" src="assets/img/logo.png" alt="logo">
+            <a class="buttonAzSk" href="" lang="en">About me</a>
+            <a class="buttonAzCl" href="" lang="en">TESTE</a>
+        </div>
     </body>
 </html>
