--- a/index.html
+++ b/index.html
@@ -8,36 +8,40 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
         
         <link rel="stylesheet" href="CSS/reset.css">
         <link rel="stylesheet" href="CSS/index.css">
+
+        <link rel="stylesheet" href="CSS/components/button.css">
         <link rel="stylesheet" href="CSS/components/title.css">
         <link rel="stylesheet" href="CSS/components/subtitle.css">
         <link rel="stylesheet" href="CSS/components/box.css">
+        <link rel="stylesheet" href="CSS/components/header.css">
+        <link rel="stylesheet" href="CSS/components/action.css">
     </head>
 
     <body>
 
-        <header>
-            <img class = "logo" src="assets/img/IgorSerio.png" alt="logo">
+        <header class = "header">
+            <img src="assets/img/logo.png" alt="logo">
 
             <nav>
-                <a href="" lang="en">Skills</a>
-                <a href="" lang="en">Projetos</a>
-                <a href="">Contatos</a>
+                <a class="action" href="" lang="en">Skills</a>
+                <a class="action" href="">Projetos</a>
+                <a class="action" href="">Contatos</a>
                 <a class="button" href="" lang="en">Download Curriculo</a>
             </nav>
         </header>
 
-        <img class = "container" src="assets/img/backgroud.png" alt="backgroud">
+        <img src="assets/img/backgroud.png" alt="backgroud">
         
         <div class = "box">
-            <h1>Hello I'm Igor</h1>
-            <h2>Developer</h2>
-            <img class = "foto" src="assets/img/logo.png" alt="logo">
-            <a class="buttonAzSk" href="" lang="en">About me</a>
-            <a class="buttonAzCl" href="" lang="en">TESTE</a>
+            <h1 class = "title">Hello I'm Igor</h1>
+            <h2 class = "subtitle">Developer</h2>
+            <img class = "foto" src="assets/img/IgorSerio.png" alt="logo">
+            <a class="button" href="" lang="en">About me</a>
+            <a class="button" href="" lang="en">TESTE</a>
         </div>
     </body>
 </html>
