--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="CSS/components/title.css">
         <link rel="stylesheet" href="CSS/components/subtitle.css">
         <link rel="stylesheet" href="CSS/components/box.css">
+        <link rel="stylesheet" href="CSS/components/banner.css">
         <link rel="stylesheet" href="CSS/components/header.css">
         <link rel="stylesheet" href="CSS/components/action.css">
     </head>
@@ -34,14 +35,20 @@
             </nav>
         </header>
 
-        <img src="assets/img/backgroud.png" alt="backgroud">
+        <section class = "banner">
         
-        <div class = "box">
-            <h1 class = "title">Hello I'm Igor</h1>
-            <h2 class = "subtitle">Developer</h2>
-            <img class = "foto" src="assets/img/IgorSerio.png" alt="logo">
-            <a class="button" href="" lang="en">About me</a>
-            <a class="button" href="" lang="en">TESTE</a>
+            <div class = "box">
+                <h1 class = "title">Hello I'm Igor</h1>
+                <h2 class = "subtitle">Developer</h2>
+                <img class = "foto" src="assets/img/IgorSerio.png" alt="logo">
+
+                <section class="navigation">
+
+                    <a class="buttonAzSk" href="" lang="en">About me</a>
+                    <a class="buttonAzSk" href="" lang="en">TESTE</a>
+
+                </section>
+        </section>
         </div>
     </body>
 </html>
