Organizes banner components

--- a/index.html
+++ b/index.html
@@ -38,11 +38,20 @@
         <section class = "banner">
         
             <div class = "box">
-                <h1 class = "title">Hello I'm Igor</h1>
-                <h2 class = "subtitle">Developer</h2>
-                <img class = "foto" src="assets/img/IgorSerio.png" alt="logo">
 
-                <section class="navigation">
+                <section class = "navTitle">
+
+                    <h1 class = "title">Hello I'm Igor<br>&emsp;Developer</h1>
+
+                </section>
+
+                <section class = "navFoto">
+
+                    <img class = "foto" src="assets/img/IgorSerio.png" alt="logo">
+
+                </section>
+
+                <section class="navButton">
 
                     <a class="buttonAzSk" href="" lang="en">About me</a>
                     <a class="buttonAzSk" href="" lang="en">TESTE</a>
