--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
         <link rel="stylesheet" href="CSS/components/banner.css">
         <link rel="stylesheet" href="CSS/components/header.css">
         <link rel="stylesheet" href="CSS/components/action.css">
+        <link rel="stylesheet" href="CSS/components/statistics.css">
+        <link rel="stylesheet" href="CSS/components/bar.css">
+
     </head>
 
     <body>
 
         <header class = "header">
-            <img src="assets/img/logo.png" alt="logo">
+            <img src="assets/img/logo.png" alt="">
 
             <nav>
                 <a class="action" href="" lang="en">Skills</a>
@@ -47,7 +50,7 @@
 
                 <section class = "navFoto">
 
-                    <img class = "foto" src="assets/img/IgorSerio.png" alt="logo">
+                    <img class = "foto" src="assets/img/IgorSerio.png" alt="">
 
                 </section>
 
@@ -57,7 +60,25 @@
                     <a class="buttonAzSk" href="" lang="en">TESTE</a>
 
                 </section>
+            </div>
         </section>
-        </div>
+        
+        <section class = "statistics">
+
+            <section class = "html_stat">
+
+                <img src="assets/img/html_logo.png" alt="">
+
+                <section class = "html_text">
+                    <p>HTML</p>
+                </section>
+
+                <section class = "html_progress_bar">
+                    <div class = "bar"></div>
+                </section>
+
+            </section>
+
+        </section>
     </body>
 </html>
