Organize html habilits

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 
             <section class = "html_stat">
 
-                <img src="assets/img/html_logo.png" alt="">
+                <section class = "html_icone">
+                    <img src="assets/img/html_logo.png" alt="">
+                </section>
 
                 <section class = "html_text">
                     <p>HTML</p>
@@ -76,7 +78,7 @@
                 <section class = "html_progress_bar">
                     <div class = "bar"></div>
                 </section>
-
+        
             </section>
 
         </section>
