create the title variation

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         </section>
         
         <section class = "statistics">
+            <h1 class = "title _second">Skills</h1>
 
             <section class = "html_stat">
 
