--- a/index.html
+++ b/index.html
@@ -14,21 +14,22 @@
         <link rel="stylesheet" href="CSS/index.css">
 
         <link rel="stylesheet" href="CSS/components/button.css">
-        <link rel="stylesheet" href="CSS/components/title.css">
+        <link rel="stylesheet" href="CSS/components/main-title.css">
         <link rel="stylesheet" href="CSS/components/subtitle.css">
         <link rel="stylesheet" href="CSS/components/box.css">
         <link rel="stylesheet" href="CSS/components/banner.css">
         <link rel="stylesheet" href="CSS/components/header.css">
         <link rel="stylesheet" href="CSS/components/action.css">
-        <link rel="stylesheet" href="CSS/components/statistics.css">
-        <link rel="stylesheet" href="CSS/components/bar.css">
+        <link rel="stylesheet" href="CSS/components/habilits.css">
+        <link rel="stylesheet" href="CSS/components/skills-dev.css">
+        <link rel="stylesheet" href="CSS/components/progress-bar.css">
 
     </head>
 
     <body>
 
         <header class = "header">
-            <img src="assets/img/logo.png" alt="">
+            <img src="assets/img/logo.png" alt="logo">
 
             <nav>
                 <a class="action" href="" lang="en">Skills</a>
@@ -44,13 +45,13 @@
 
                 <section class = "navTitle">
 
-                    <h1 class = "title">Hello I'm Igor<br>&emsp;Developer</h1>
+                    <h1 class = "main-title">Hello I'm Igor<br>&emsp;Developer</h1>
 
                 </section>
 
                 <section class = "navFoto">
 
-                    <img class = "foto" src="assets/img/IgorSerio.png" alt="">
+                    <img class = "foto" src="assets/img/IgorSerio.png" alt="foto perfil">
 
                 </section>
 
@@ -63,24 +64,16 @@
             </div>
         </section>
         
-        <section class = "statistics">
-            <h1 class = "title _second">Skills</h1>
+        <section class = "habilits">
+            <h1 class = "main-title _second">Skills</h1>
 
-            <section class = "html_stat">
-
-                <section class = "html_icone">
-                    <img src="assets/img/html_logo.png" alt="">
-                </section>
-
-                <section class = "html_text">
-                    <p>HTML</p>
-                </section>
-
-                <section class = "html_progress_bar">
-                    <div class = "bar"></div>
-                </section>
-        
-            </section>
+            <article class = "skills-dev">
+                <img class = "html-icon" src = "assets/img/html_logo.png" all = "logo html">
+                <div class = "html-progtitle">
+                    <h2 class = "title">HTML</h2>
+                    <progress class = "progress-bar" max = "100" value = "30">30%</progress>
+                </div>
+            </article>
 
         </section>
     </body>
