organize skills components

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <link rel="stylesheet" href="CSS/components/habilits.css">
         <link rel="stylesheet" href="CSS/components/skills-dev.css">
         <link rel="stylesheet" href="CSS/components/progress-bar.css">
+        <link rel="stylesheet" href="CSS/components/wrapper-skill.css">
 
     </head>
 
@@ -66,14 +67,72 @@
         
         <section class = "habilits">
             <h1 class = "main-title _second">Skills</h1>
+            <div class = "wrapper-skill">
 
-            <article class = "skills-dev">
-                <img class = "html-icon" src = "assets/img/html_logo.png" all = "logo html">
-                <div class = "html-progtitle">
-                    <h2 class = "title">HTML</h2>
-                    <progress class = "progress-bar" max = "100" value = "30">30%</progress>
-                </div>
-            </article>
+                <article class = "skills-dev">
+                    <img class = "icon" src = "assets/skill-logo/html_logo.png" all = "logo html">
+                    <div class = "progtitle">
+                        <h2 class = "title">HTML</h2>
+                        <progress class = "progress-bar" max = "100" value = "30">30%</progress>
+                    </div>
+                </article>
+
+                <article class = "skills-dev">
+                    <img class = "icon" src = "assets/skill-logo/ico_css3.png" all = "logo css">
+                    <div class = "progtitle">
+                        <h2 class = "title">CSS</h2>
+                        <progress class = "progress-bar" max = "100" value = "30">30%</progress>
+                    </div>
+                </article>
+
+                <article class = "skills-dev">
+                    <img class = "icon" src = "assets/skill-logo/ico_js.png" all = "logo js">
+                    <div class = "progtitle">
+                        <h2 class = "title">Java script</h2>
+                        <progress class = "progress-bar" max = "100" value = "30">30%</progress>
+                    </div>
+                </article>   
+                
+                <article class = "skills-dev">
+                    <img class = "icon" src = "assets/skill-logo/ico_nodejs.png" all = "logo nodejs">
+                    <div class = "progtitle">
+                        <h2 class = "title">Node js</h2>
+                        <progress class = "progress-bar" max = "100" value = "30">30%</progress>
+                    </div>
+                </article>
+
+                <article class = "skills-dev">
+                    <img class = "icon" src = "assets/skill-logo/ico_react.png" all = "logo react">
+                    <div class = "progtitle">
+                        <h2 class = "title">React</h2>
+                        <progress class = "progress-bar" max = "100" value = "30">30%</progress>
+                    </div>
+                </article>
+
+                <article class = "skills-dev">
+                    <img class = "icon" src = "assets/skill-logo/ico_restapi.png" all = "logo restapi">
+                    <div class = "progtitle">
+                        <h2 class = "title">Restapi</h2>
+                        <progress class = "progress-bar" max = "100" value = "30">30%</progress>
+                    </div>
+                </article>
+
+                <article class = "skills-dev">
+                    <img class = "icon" src = "assets/skill-logo/ico_tdd.png" all = "logo tdd">
+                    <div class = "progtitle">
+                        <h2 class = "title">Tdd</h2>
+                        <progress class = "progress-bar" max = "100" value = "30">30%</progress>
+                    </div>
+                </article>
+
+                <article class = "skills-dev">
+                    <img class = "icon" src = "assets/skill-logo/ico_ux.png" all = "logo ux">
+                    <div class = "progtitle">
+                        <h2 class = "title">Ux</h2>
+                        <progress class = "progress-bar" max = "100" value = "30">30%</progress>
+                    </div>
+                </article>
+            </div>
 
         </section>
     </body>
