create section projects

--- a/index.html
+++ b/index.html
@@ -135,5 +135,10 @@
             </div>
 
         </section>
+
+        <section class = "Projects">
+            
+        </section>
+
     </body>
 </html>
