create projects itens

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <link rel="stylesheet" href="CSS/components/skills-dev.css">
         <link rel="stylesheet" href="CSS/components/progress-bar.css">
         <link rel="stylesheet" href="CSS/components/wrapper-skill.css">
+        <link rel="stylesheet" href="CSS/components/projects.css">
 
     </head>
 
@@ -136,8 +137,12 @@
 
         </section>
 
-        <section class = "Projects">
-            
+        <section class = "projects">
+            <div class = "projects-div">
+                <img class = "project" src="assets/img/sonho de prata logo.jpeg" alt="projeto-sonho-de-prata">
+                <img class = "project" src="assets/img/IgorSerio.png" alt="projeto-portifolio">
+                <img class = "project" src="assets/img/Python.png" alt="projeto-rpg-pythom">
+            </div>
         </section>
 
     </body>
